Fix in process: total signal depends on time grid resolution

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -24,7 +24,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
+   "id": "8678da54-1ec5-4620-8e79-e513f4185304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kmax_grid(laser_params):\n",
+    "    '''\n",
+    "    Laser params must include lam, tau, w0, theta and phi\n",
+    "    theta, phi in degrees\n",
+    "    '''\n",
+    "    lam, tau = laser_params['lmbd'], laser_params['tau']\n",
+    "    theta, phi = laser_params['theta'], laser_params['phi']\n",
+    "    if 'w0' in laser_params.keys():\n",
+    "        w0 = laser_params['w0']\n",
+    "\n",
+    "    k = 2*np.pi/lam    \n",
+    "    theta /= 180/np.pi\n",
+    "    phi /= 180/np.pi\n",
+    "    \n",
+    "    ekx = np.sin(theta) * np.cos(phi)\n",
+    "    eky = np.sin(theta) * np.sin(phi)\n",
+    "    ekz = np.cos(theta)\n",
+    "    ek = np.array([ekx, eky, ekz])\n",
+    "\n",
+    "    if np.sin(theta) == 0.0:\n",
+    "        phi = 0.0\n",
+    "    \n",
+    "    e1x = -np.sin(phi)\n",
+    "    e1y = np.cos(phi)\n",
+    "    e1z = 0.0\n",
+    "    e1 = np.array([e1x, e1y, e1z])\n",
+    "\n",
+    "    e2x = np.cos(phi) * np.cos(theta)\n",
+    "    e2y = np.sin(phi) * np.cos(theta)\n",
+    "    e2z = -np.sin(theta)\n",
+    "    e2 = np.array([e2x, e2y, e2z])\n",
+    "        \n",
+    "    kbw_perp = 4/w0\n",
+    "    kbw_long = 8/(c*tau)\n",
+    "    \n",
+    "    k0 = ek * k\n",
+    "    kmax = np.abs(k0 + ek * kbw_long)\n",
+    "    \n",
+    "    for beta in np.linspace(0, 2*np.pi, 64, endpoint=False):\n",
+    "        kp = k0 + ek * kbw_long + kbw_perp * (np.sin(beta) * e1 + np.cos(beta) * e2)\n",
+    "        kmax = np.maximum(kmax, np.abs(kp))\n",
+    "    \n",
+    "    return kmax\n",
+    "\n",
+    "def get_spatial_steps(lasers, L, grid_res=1, equal_resolution=False):\n",
+    "    '''\n",
+    "    Calculates necessary spatial resolution\n",
+    "    \n",
+    "    grid_res: [float] - controls the resolution\n",
+    "    '''\n",
+    "    kmax = np.zeros((3,))\n",
+    "    for laser_params in lasers:\n",
+    "        kmax = np.maximum(kmax, kmax_grid(laser_params))\n",
+    "    \n",
+    "    # test cigar conjecture\n",
+    "    if equal_resolution:\n",
+    "        kmax = np.max(kmax) * np.ones(3) \n",
+    "    N = np.ceil(grid_res * L * 3 * kmax/np.pi).astype(int)\n",
+    "    # N = [pp.helper.fftw_padsize(n) for n in N]\n",
+    "    return N\n",
+    "\n",
+    "def get_t_steps(t_start, t_end, lam, grid_res=1):\n",
+    "    '''\n",
+    "    Calculates necessary temporal resolution\n",
+    "    \n",
+    "    grid_res: [float] - controls the resolution\n",
+    "    '''\n",
+    "    fmax = c/lam\n",
+    "    return int(np.ceil((t_end-t_start)*fmax*6*grid_res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "6ab8e671-dea5-4a0d-b784-424cf92a6674",
    "metadata": {},
    "outputs": [],
@@ -33,7 +111,7 @@
     "    return 2*(8/np.pi)**0.25*np.sqrt(W/(tau*w0**2*np.pi))\n",
     "\n",
     "\n",
-    "tau = 25e-15\n",
+    "tau = 20e-15\n",
     "W = 25\n",
     "lam = 1e-6\n",
     "w0 = 1*lam\n",
@@ -61,7 +139,7 @@
     "    \"focus_t\": 0.,\n",
     "    \"theta\": 180,\n",
     "    \"phi\": 0,\n",
-    "    \"beta\": 0,\n",
+    "    \"beta\": 90,\n",
     "    \"lmbd\": lam,\n",
     "    \"w0\": w0,\n",
     "    \"tau\": tau,\n",
@@ -72,12 +150,12 @@
     "\n",
     "fields_params = [field_1, field_2]\n",
     "\n",
-    "x0 = 10*w0\n",
-    "x = np.linspace(-x0,x0,101).reshape((-1,1,1))\n",
-    "y0 = 10*w0\n",
-    "y = np.linspace(-y0,y0,101).reshape((1,-1,1))\n",
-    "z0 = 20*w0\n",
-    "z = np.linspace(-z0,z0,401).reshape((1,1,-1))\n",
+    "x0 = 4*w0\n",
+    "x = np.linspace(-x0,x0,32).reshape((-1,1,1))\n",
+    "y0 = 4*w0\n",
+    "y = np.linspace(-y0,y0,32).reshape((1,-1,1))\n",
+    "z0 = 10*w0\n",
+    "z = np.linspace(-z0,z0,256).reshape((1,1,-1))\n",
     "grid = (x, y, z)\n",
     "\n",
     "field1 = ParaxialGaussianAnalytic(field_1, grid)\n",
@@ -86,58 +164,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "26431cdd-e314-4cfe-82e3-f2375c7a24ce",
+   "execution_count": 41,
+   "id": "5c7c520c-7bc5-4d54-b7dd-9fc9a6017803",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "180"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "E0_num = field1.E0"
+    "get_t_steps(-2*tau, 2*tau, 0.8e-6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a84990b3-6343-47f7-ba51-f28fa6b58d84",
+   "execution_count": 42,
+   "id": "26625280-2796-46ac-a6af-6c469bc0323c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16, 16, 73])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "E0_th = 2 * (8/pi)**0.25 * np.sqrt(W/(tau*w0**2*pi*c*epsilon_0))"
+    "get_spatial_steps(fields_params, np.array([4*w0, 4*w0, 10*w0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9668fe5b-6689-4686-9df9-92e9069de0c9",
+   "execution_count": 20,
+   "id": "ce839380-08da-4eb3-b0e4-a6f5c3df11e1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "874893865680378.1\n",
-      "874893865679382.0\n",
-      "1.0000000000011386\n"
+      "5.99584916e-06\n",
+      "3.141592653589793e-06\n"
      ]
     }
    ],
    "source": [
-    "print(E0_num)\n",
-    "print(E0_th)\n",
-    "print(E0_num/E0_th)"
+    "print(tau*c)\n",
+    "print(np.pi*lam)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
+   "id": "eae0ca1c-8564-488f-9a09-5732e1ecc030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = np.prod(field.fields[0].grid_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "43ab0a53-f7c4-4d5a-9377-929f0de673d0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/maximus/Research/github/quantum-vacuum/src/quvac/vacuum_emission.py:97: RuntimeWarning: invalid value encountered in divide\n",
-      "  self.__dict__[f'k{ax}_unit'] = self.kmeshgrid[i] / self.kabs\n"
+      "1.811562331173633e+17\n",
+      "262144\n",
+      "5.223317214502852e-21\n"
      ]
     }
    ],
@@ -147,70 +256,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "id": "d9e7a000-79d1-492d-8928-5baab10a8305",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_grid = np.linspace(-25e-15, 25e-15, 50)\n",
+    "t_grid = np.linspace(-2*tau, 2*tau, 361)\n",
     "vacem.calculate_vacuum_current(t_grid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "id": "bee8e59b-cdff-4920-b9a7-815112aaa114",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2115808.419367646\n"
+     ]
+    }
+   ],
    "source": [
-    "Ntot = vacem.calculate_total_signal()"
+    "Ntot = vacem.calculate_total_signal()\n",
+    "print(Ntot)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2282d917-9cbc-423a-afd2-7a7fd0d601bc",
+   "execution_count": 53,
+   "id": "1ebf4bb8-a72f-43d6-9f6e-803d9876b19c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2115808.419367646\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Ntot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b8f5b87b-b438-4c7a-8f2e-62afc3bddf8d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(2.67792643e+23)"
+       "np.float64(3383.2067257629637)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Ntot"
+    "Ntot / (np.pi*np.sqrt(4*np.pi))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ddeae227-390d-4b9d-9581-88ac953e399b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(9.33702449e+22)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Ntot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "id": "4ee5c773-42dd-41fa-b1b2-02a4816d1375",
    "metadata": {},
    "outputs": [
@@ -220,60 +335,13 @@
        "228.125"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1.46e-2 * 25**3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5f663124-076c-4a55-87ca-5bdfb2d410ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(4381731405.966063)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Ntot / vacem.dVk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "2f73c91e-4e0a-4690-b06a-0d14e919dcb7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.sum(vacem.e1x > 1))\n",
-    "print(np.sum(vacem.e1y > 1))\n",
-    "print(np.sum(vacem.e1z > 1))\n",
-    "print(np.sum(vacem.e2x > 1))\n",
-    "print(np.sum(vacem.e2y > 1))"
+    "1.46e-2 * W**3 * (1e-6/lam)**5"
    ]
   },
   {
