--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "23bf7d0d-39a8-49f4-b881-620101dc5d81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'quvac.analytic_scalings' from '/home/maximus/Research/github/quantum-vacuum/src/quvac/analytic_scalings.py'>"
+       "<module 'quvac.grid' from '/home/maximus/Research/github/quantum-vacuum/src/quvac/grid.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,12 +33,77 @@
     "rcParams['font.size'] = 20\n",
     "\n",
     "import quvac\n",
-    "from quvac.paraxial_gaussian import ParaxialGaussianAnalytic\n",
-    "from quvac.field import ExternalField\n",
-    "from quvac.vacuum_emission import VacuumEmission\n",
+    "from quvac.field.paraxial_gaussian import ParaxialGaussianAnalytic\n",
+    "from quvac.field.external_field import ExternalField\n",
+    "from quvac.integrator.vacuum_emission import VacuumEmission\n",
     "from quvac.analytic_scalings import get_two_paraxial_scaling\n",
+    "from quvac.grid import GridXYZ\n",
     "from quvac.grid_utils import get_xyz_size, get_t_size\n",
-    "reload(quvac.analytic_scalings)"
+    "reload(quvac.grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab22968f-1bae-4468-870d-11112a05017d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bf6e93bc-fec8-4138-8380-b5991c2d6438",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xyz = [np.linspace(-1,1,10) for _ in range(3)]\n",
+    "grid = GridXYZ(xyz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9a9f720f-50f6-4573-bf82-b7aa647c378b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m d \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1\u001b[39m}\n\u001b[1;32m      2\u001b[0m upd_keys \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgrid_shape\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdV\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mxyz\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m \u001b[43mgrid\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__dict__\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mupd_keys\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'a': 1}\n",
+    "upd_keys = ['grid_shape', 'dV', 'xyz']\n",
+    "grid.__dict__.get(upd_keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a1cc84e4-688d-46b3-8898-0345b75a8696",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['grid', 'grid_shape', 'N', 'xyz', 'x', 'y', 'z', 'dxyz', 'dV']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(grid.__dict__.keys())"
    ]
   },
   {
@@ -893,15 +958,31 @@
    "cell_type": "markdown",
    "id": "be291573-5012-4ce2-b493-3bdca5815f5a",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Random tests"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fabe5c76-0dff-4389-aee2-312af5ed1233",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {l:i for i,l in enumerate('abcd')}\n",
+    "tuple('a c'.split()) in d"
+   ]
   },
   {
    "cell_type": "code",
