Add to analyzer class pol signal calculation and transform to spherical coordinates

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "23bf7d0d-39a8-49f4-b881-620101dc5d81",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "<module 'quvac.grid' from '/home/maximus/Research/github/quantum-vacuum/src/quvac/grid.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,32 +43,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "24f747b4-a675-4550-8a10-91dccf510588",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  0.        ,   6.28318531,  12.56637061,  18.84955592,\n",
-       "        25.13274123, -31.41592654, -25.13274123, -18.84955592,\n",
-       "       -12.56637061,  -6.28318531])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "k = 2*np.pi*np.fft.fftfreq(10, 0.1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "720f50f5-e303-4881-bcb6-0e0cbd6b4a5b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Test: two paraxial gaussians for different collision angles"
    ]
@@ -583,7 +562,9 @@
   {
    "cell_type": "markdown",
    "id": "b7052afa-31a5-4cda-94e4-1d6438e3b349",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Test Euler rotation"
    ]
@@ -642,29 +623,43 @@
    "id": "be291573-5012-4ce2-b493-3bdca5815f5a",
    "metadata": {},
    "source": [
-    "### Random tests"
+    "## Random tests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "fabe5c76-0dff-4389-aee2-312af5ed1233",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.017495462702715854 1.7320508075688772\n",
+      "====================\n",
+      "0.014284013928896666 3.1273086396608964\n",
+      "====================\n",
+      "0.010100666585321971 6.273084640594265\n",
+      "====================\n"
+     ]
     }
    ],
    "source": [
-    "d = {l:i for i,l in enumerate('abcd')}\n",
-    "tuple('a c'.split()) in d"
+    "from astropy.coordinates import cartesian_to_spherical\n",
+    "\n",
+    "xyz = x,y,z = [np.linspace(-1,1,100)[:,None,None],\n",
+    "               np.linspace(-1,1,100)[None,:,None],\n",
+    "               np.linspace(-1,1,100)[None,None,:]]\n",
+    "sph = r,theta,phi = cartesian_to_spherical(*xyz)\n",
+    "sph = r,theta,phi = [np.array(coord) for coord in sph]\n",
+    "theta += np.pi/2\n",
+    "print(r.min(), r.max())\n",
+    "print('='*20)\n",
+    "print(theta.min(), theta.max())\n",
+    "print('='*20)\n",
+    "print(phi.min(), phi.max())\n",
+    "print('='*20)"
    ]
   },
   {
