Attempt to fix discrepancy between expected signal and calculated one

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "25c192d4-1e9a-4e8d-888b-d7f05385581d",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "320 48 320\n"
+      "2.4e-05 2.4e-05 4.49688687e-05\n",
+      "30 30 192\n"
      ]
     }
    ],
@@ -78,7 +79,7 @@
     "W = 25\n",
     "lam = 0.8e-6\n",
     "w0 = 2*lam\n",
-    "theta = 90\n",
+    "theta = 180\n",
     "beta = 90\n",
     "\n",
     "# Define fields\n",
@@ -112,10 +113,12 @@
     "\n",
     "fields_params = [field_1, field_2]\n",
     "\n",
-    "x0, y0, z0 = 5*c*tau, 12*w0, 5*c*tau\n",
+    "# x0, y0, z0 = 5*c*tau, 15*w0, 5*c*tau\n",
+    "x0, y0, z0 = 15*w0, 15*w0, 6*c*tau\n",
+    "print(x0, y0, z0)\n",
     "box_size = np.array([x0, y0, z0])/2\n",
     "Nxyz = get_xyz_size(fields_params, box_size)\n",
-    "Nx, Ny, Nz = [2*N for N in Nxyz]\n",
+    "Nx, Ny, Nz = [1*N for N in Nxyz]\n",
     "print(Nx, Ny, Nz)\n",
     "\n",
     "t0 = 4*tau\n",
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "7e047979-5d6a-459e-b26a-15e06545ca8e",
    "metadata": {},
    "outputs": [
@@ -158,17 +161,17 @@
       "\n",
       "Timings:\n",
       "=================================================\n",
-      "Field setup:                       13.43 s\n",
-      "Amplitudes calculation:      7 min 10.71 s\n",
-      "Postprocess:                        0.84 s\n",
+      "Field setup:                        1.00 s\n",
+      "Amplitudes calculation:            54.72 s\n",
+      "Postprocess:                        0.03 s\n",
       "-------------------------------------------------\n",
-      "Total:                       7 min 24.99 s\n",
+      "Total:                             55.75 s\n",
       "=================================================\n",
       "\n",
       "Memory (max usage):\n",
       "=================================================\n",
-      "Amplitudes calculation:            3.67 GB\n",
-      "Total:                             3.67 GB\n",
+      "Amplitudes calculation:          225.32 MB\n",
+      "Total:                           225.32 MB\n",
       "=================================================\n",
       "\n",
       "Simulation finished!\n"
@@ -181,28 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "17422434-9726-4e4e-ae64-fe9c61a8541f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "92ea6da3-969a-4171-a450-21c7ebc786ca",
    "metadata": {},
    "outputs": [
@@ -222,7 +204,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
+   "id": "b8b21550-79d2-4705-9fcc-2413f59d0109",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.767161089915845\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['N_tot'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "f64eab79-f230-45e6-b7de-35f75d615f20",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.31215324216383\n"
+      "0.0\n"
      ]
     }
    ],
@@ -247,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(3.3503064395687376)"
+       "np.float64(86.91453784122695)"
       ]
      },
      "execution_count": 17,
