Small fixes to speed of maxwell solver

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -158,20 +158,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[{'W': 25, 'beta': 0, 'field_type': 'paraxial_gaussian_maxwell', 'focus_t': 0.0, 'focus_x': [0.0, 0.0, 0.0], 'lam': 8e-07, 'phase0': 0, 'phi': 0, 'tau': 2.5e-14, 'theta': 0, 'w0': 1.6e-06}, {'W': 25, 'beta': 90, 'field_type': 'paraxial_gaussian_maxwell', 'focus_t': 0.0, 'focus_x': [0.0, 0.0, 0.0], 'lam': 8e-07, 'phase0': 0, 'phi': 0, 'tau': 2.5e-14, 'theta': 180, 'w0': 1.6e-06}]]\n",
+      "I am here\n",
       "\n",
       "Timings:\n",
       "=================================================\n",
-      "Field setup:                        0.62 s\n",
-      "Amplitudes calculation:            31.17 s\n",
+      "Field setup:                        0.67 s\n",
+      "Amplitudes calculation:            19.65 s\n",
       "Postprocess:                        0.02 s\n",
       "-------------------------------------------------\n",
-      "Total:                             31.81 s\n",
+      "Per iteration:                      0.09 s  \n",
+      "-------------------------------------------------\n",
+      "Total:                             20.34 s\n",
       "=================================================\n",
       "\n",
       "Memory (max usage):\n",
       "=================================================\n",
-      "Amplitudes calculation:          234.25 MB\n",
-      "Total:                           234.25 MB\n",
+      "Amplitudes calculation:          198.62 MB\n",
+      "Total:                           198.62 MB\n",
       "=================================================\n",
       "\n",
       "Simulation finished!\n"
@@ -212,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.76716108991583\n"
+      "56.767161089918886\n"
      ]
     }
    ],
