Add spherical params as an argument

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "25c192d4-1e9a-4e8d-888b-d7f05385581d",
    "metadata": {},
    "outputs": [],
@@ -57,8 +57,8 @@
     "tau = 25e-15\n",
     "W = 25\n",
     "lam = 0.8e-6\n",
-    "w01 = 4*lam\n",
-    "w02 = 1*lam\n",
+    "w01 = 1*lam\n",
+    "w02 = 4*lam\n",
     "theta = 160\n",
     "beta = 90\n",
     "\n",
@@ -119,6 +119,9 @@
     "        'perp_polarization_type': 'optical axis',\n",
     "        'perp_field_idx': 1,\n",
     "        'calculate_spherical': True,\n",
+    "        'spherical_params': {\n",
+    "            'angular_resolution': 0.5*np.pi/180.  \n",
+    "        },\n",
     "        'calculate_discernible': True,\n",
     "    },\n",
     "}\n",
@@ -135,46 +138,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "7e047979-5d6a-459e-b26a-15e06545ca8e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maximus/Research/github/quantum-vacuum/src/quvac/postprocess.py:194: UserWarning: Np_tot signal on cartesian and spherical \n",
-      "                                  grid differ by more than 1%:\n",
-      "                                  N total (xyz): 7.773\n",
-      "                                  N total (sph): 7.679\n",
-      "  warnings.warn(f\"\"\"{total_key} signal on cartesian and spherical\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Energy: 3.355124931140793e-08\n",
-      "Energy: 2.20529831836791e-09\n",
-      "Energy: 3.355124931140793e-08\n",
-      "Energy: 2.20529831836791e-09\n",
       "\n",
       "Timings:\n",
       "=================================================\n",
-      "Field setup:                        7.32 s\n",
-      "Vacem setup:                        0.14 s\n",
-      "Amplitudes calculation:      8 min 44.39 s\n",
-      "Postprocess:                       20.67 s\n",
+      "Field setup:                        4.16 s\n",
+      "Vacem setup:                        0.09 s\n",
+      "Amplitudes calculation:      4 min 38.50 s\n",
+      "Postprocess:                  1 min 9.48 s\n",
       "-------------------------------------------------\n",
-      "Per iteration:                      2.33 s  \n",
+      "Per iteration:                      1.24 s  \n",
       "-------------------------------------------------\n",
-      "Total:                       9 min 12.53 s\n",
+      "Total:                       5 min 52.22 s\n",
       "=================================================\n",
       "\n",
       "Memory (max usage):\n",
       "=================================================\n",
-      "Amplitudes calculation:            2.71 GB\n",
-      "Total:                             3.77 GB\n",
+      "Amplitudes calculation:            1.61 GB\n",
+      "Total:                             7.97 GB\n",
       "=================================================\n",
       "\n",
       "Simulation finished!\n"
@@ -187,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "92ea6da3-969a-4171-a450-21c7ebc786ca",
    "metadata": {},
    "outputs": [
@@ -196,8 +184,8 @@
      "output_type": "stream",
      "text": [
       "['kx', 'ky', 'kz', 'N_xyz', 'N_total', 'ep', 'Np_xyz', 'Np_total', 'k', 'theta', 'phi', 'N_sph', 'N_sph_total', 'background', 'discernible', 'N_disc', 'N_angular']\n",
-      "51.27793929484926\n",
-      "7.772746366777065\n"
+      "43.1971270730111\n",
+      "35.30218386009189\n"
      ]
     }
    ],
@@ -213,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "b2b21e95-fe97-4c2d-ab56-7bf31e634f9f",
    "metadata": {},
    "outputs": [],
@@ -224,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "7837be3f-3ac5-4f56-9a5c-7fcb9dc92e10",
    "metadata": {},
    "outputs": [
@@ -232,9 +220,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51.27793929484926\n",
-      "51.01009235287813\n",
-      "1.3088889325866753\n"
+      "43.1971270730111\n",
+      "42.975513574112306\n",
+      "0.6713467712605758\n"
      ]
     }
    ],
