refactor: add parallel simulations to the notebook

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -144,16 +144,14 @@
   {
    "cell_type": "markdown",
    "id": "2f5a9439-7eae-43db-a42f-d7cc2a63912d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Launch a single simulation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "25c192d4-1e9a-4e8d-888b-d7f05385581d",
    "metadata": {},
    "outputs": [],
@@ -169,8 +167,10 @@
     "\n",
     "mode = 'maxwell'\n",
     "order = 0\n",
+    "parallel = True\n",
+    "# parallel = False\n",
     "\n",
-    "channels = True\n",
+    "channels = False\n",
     "integrator_type = 'vacuum_emission_channels' if channels else 'vacuum_emission'\n",
     "\n",
     "# Define fields\n",
@@ -213,7 +213,7 @@
     "    'fields': fields_params,\n",
     "    'grid': {\n",
     "        'mode': 'dynamic',\n",
-    "        'collision_geometry': 'z',\n",
+    "        'collision_geometry': 'xz',\n",
     "        'transverse_factor': 15,\n",
     "        'longitudinal_factor': 6,\n",
     "        'time_factor': 4,\n",
@@ -228,7 +228,8 @@
     "        }\n",
     "    },\n",
     "    'performance': {\n",
-    "        'nthreads': 8\n",
+    "        'nthreads': 8,\n",
+    "        'test_run': False\n",
     "    },\n",
     "    'postprocess': {\n",
     "        'perp_polarization_type': 'optical axis',\n",
@@ -242,19 +243,24 @@
     "}\n",
     "\n",
     "path = '../data/test/test_channels'\n",
+    "if parallel:\n",
+    "    path += '_parallel'\n",
     "Path(path).mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "ini_file = os.path.join(path, 'ini.yaml')\n",
     "write_yaml(ini_file, ini_data)\n",
     "\n",
     "# quvac_simulation(ini_file)\n",
-    "SCRIPT_PATH = '../src/quvac/simulation.py'"
+    "if not parallel:\n",
+    "    SCRIPT_PATH = '../src/quvac/simulation.py'\n",
+    "else:\n",
+    "    SCRIPT_PATH = '../src/quvac/simulation_parallel.py'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7e047979-5d6a-459e-b26a-15e06545ca8e",
+   "id": "d16e1634-1b18-41a2-84d1-64da77e41fb7",
    "metadata": {},
    "outputs": [
     {
@@ -262,51 +268,22 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Grid:\n",
-      "====================================================\n",
-      "Space\n",
-      "\n",
-      "Number of points (x,y,z):              (30, 30, 192)\n",
-      "Box for x axis:                 (-6.00, 5.60) micron\n",
-      "Box for y axis:                 (-6.00, 5.60) micron\n",
-      "Box for z axis:               (-22.48, 22.25) micron\n",
-      "----------------------------------------------------\n",
-      "Time\n",
-      "\n",
-      "Number of points:                                225\n",
-      "Box:                              (-50.00, 50.00) fs\n",
-      "====================================================\n",
-      "\n",
-      "\n",
-      "Field constructor:\n",
-      "====================================================\n",
-      "Probe:\n",
-      "MaxwellMultiple:\n",
-      "    paraxial_gaussian_maxwell: GaussianAnalytic\n",
-      "----------------------------------------------------\n",
-      "Pump\n",
-      "MaxwellMultiple:\n",
-      "    paraxial_gaussian_maxwell: GaussianAnalytic\n",
-      "====================================================\n",
-      "\n",
-      "\n",
       "Timings:\n",
-      "=================================================\n",
-      "Field setup:                        0.61 s\n",
+      "====================================================\n",
+      "Field setup:                        0.71 s\n",
       "Vacem setup:                        0.00 s\n",
-      "Amplitudes calculation:            25.40 s\n",
-      "Postprocess:                        0.05 s\n",
-      "-------------------------------------------------\n",
-      "Per iteration:                      0.11 s  \n",
-      "-------------------------------------------------\n",
-      "Total:                             26.07 s\n",
-      "=================================================\n",
+      "Amplitudes calculation:            52.01 s\n",
+      "    Per time step:                  0.09 s\n",
+      "Postprocess:                        0.23 s\n",
+      "----------------------------------------------------\n",
+      "Total:                             52.81 s\n",
+      "====================================================\n",
       "\n",
       "Memory (max usage):\n",
-      "=================================================\n",
-      "Amplitudes calculation:          245.80 MB\n",
-      "Total:                           245.80 MB\n",
-      "=================================================\n",
+      "====================================================\n",
+      "Amplitudes calculation:          410.33 MB\n",
+      "Total:                           410.33 MB\n",
+      "====================================================\n",
       "\n",
       "Simulation finished!\n"
      ]
@@ -314,6 +291,100 @@
    ],
    "source": [
     "status = os.system(f\"{SCRIPT_PATH} --input {ini_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9ffd6c3a-c5c1-40c3-83aa-5eeb415aef21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "258.91930473378153\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.load(os.path.join(path, 'spectra.npz'))\n",
+    "Ntot = data['N_total']\n",
+    "print(Ntot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "09d10ed6-9274-4047-85e2-e7c08bcc2975",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Timings:\n",
+      "====================================================\n",
+      "Run jobs:                          39.33 s\n",
+      "Postprocess:                        0.09 s\n",
+      "----------------------------------------------------\n",
+      "Total:                             39.43 s\n",
+      "====================================================\n",
+      "\n",
+      "Memory (max usage):\n",
+      "====================================================\n",
+      "Running jobs:                    126.41 MB\n",
+      "Total:                           169.54 MB\n",
+      "====================================================\n",
+      "\n",
+      "Simulation finished!\n"
+     ]
+    }
+   ],
+   "source": [
+    "status = os.system(f\"{SCRIPT_PATH} --input {ini_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4e4e754e-ccb5-480f-ab9d-5442a21df58b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "258.9193047337835\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.load(os.path.join(path, 'spectra.npz'))\n",
+    "Ntot = data['N_total']\n",
+    "print(Ntot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4636f391-718c-4620-9a87-242025be8628",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.+2.j])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0 + np.array([1 + 2j])"
    ]
   },
   {
